--- a/html/002-origins.html
+++ b/html/002-origins.html
@@ -6,7 +6,8 @@
 
 <h2>Origins</h2>
 
-<p>Markdown was proposed in 2004 by John Gruber of the "Daring Fireball" blog fame.</p>
+<p>Markdown was proposed in 2004 by John Gruber of the "Daring Fireball" blog fame
+in collaboration with Arron Swartz a programmer and Open Source advocate.</p>
 
 <h2>Variants and standardization efforts</h2>
 
