added link to Aaron Swartz movie on YouTube

--- a/html/011-final_thoughts.html
+++ b/html/011-final_thoughts.html
@@ -26,6 +26,12 @@ It will have a file "README.md" in the project root folder. Likewise, creating
 such a file in your existing project will cause it to be rendered as HTML
 on the project's home page. This also works for a file named "README.markdown".</p>
 
+<h2>About Aaron Swartz</h2>
+
+<ul>
+<li><a href="https://www.youtube.com/watch?v=9vz06QO3UkQ">The internet's own boy: The story of Aaron Swartz. Full movie 2014: https://www.youtube.com/watch?v=9vz06QO3UkQ</a></li>
+</ul>
+
 <h2>How was it made?</h2>
 
 <p>This slide deck was made using  multiple Markdown files and then
