--- a/html/007-lists.html
+++ b/html/007-lists.html
@@ -30,6 +30,27 @@ Nested lists can use a combination of these types.</p>
 <li>Final list element</li>
 </ul>
 
+<h3>Ordered lists</h3>
+
+<p>Ordered lists use numbers followed by a period: '.'
+They can be out of sequence, but must start with : '1.'</p>
+
+<pre>
+1. List number 1
+3. List number 2
+4. List number 3
+2. List number 4
+</pre>
+
+<p>Becomes:</p>
+
+<ol>
+<li>List number 1</li>
+<li>List number 2</li>
+<li>List number 3</li>
+<li>List number 4</li>
+</ol>
+
 <hr />
 
 <p><a href="006-text_spans.html">Previous:006</a> <a href="001-intro_bio.html">Top:001</a> <a href="008-nested_lists.html">Next:008</a></p>
