Added notes regarding bare links to presentation/009-links.md and embedded comments to presentation/004-hello.md and linked the slide deck itself to README.md

--- a/html/004-hello.html
+++ b/html/004-hello.html
@@ -9,6 +9,26 @@ Hello World
 
 </pre>
 
+<h2>Comments</h2>
+
+<p>All writers and programmers should know how insert comments in their source
+documents and code. Comments are for the author and future maintainers
+of the source file and will not appear in the compiled output.</p>
+
+<p>Here is the most general form of comment understood by most Markdown processors:</p>
+
+<pre>
+[//]: # (This text should not appear in the output)
+</pre>
+
+<p>Note: Be sure to include a blank line both before and after the comment line.</p>
+
+<p>Here is the invisible part between horizontal rules:</p>
+
+<hr />
+
+<hr />
+
 <hr />
 
 <p><a href="003-blocks_vs_spans.html">Previous:003</a> <a href="001-intro_bio.html">Top:001</a> <a href="005-blocks.html">Next:005</a></p>
