--- a/html/009-links.html
+++ b/html/009-links.html
@@ -32,6 +32,18 @@ quotes after the URL but before the closing right paren</p>
 <li><a href="https://wiki.archlinux.org" title="A great place for Linux information">The Arch Wiki</a></li>
 </ul>
 
+<h2>Bare links</h2>
+
+<p>If you want links which have the text is the same as the URL, you can use this style:</p>
+
+<p><code>
+&lt;http://www.example.com&gt;
+</code></p>
+
+<p>It will appear as:</p>
+
+<p><a href="http://www.example.com">http://www.example.com</a></p>
+
 <hr />
 
 <p><a href="008-nested_lists.html">Previous:008</a> <a href="001-intro_bio.html">Top:001</a> <a href="010-code_blocks.html">Next:010</a></p>
