--- a/html/011-final_thoughts.html
+++ b/html/011-final_thoughts.html
@@ -18,6 +18,40 @@
 
 <p>and many more.</p>
 
+<h2>Displaying Markdown in your terminal</h2>
+
+<p>You can use the 'glow'  application to pretty print your Markdown files in
+from the  command line.</p>
+
+<h3>Installation</h3>
+
+<p>See the main source page on github.com for install directions:</p>
+
+<p><a href="https://github.com/charmbracelet/glow">Glow on Github</a></p>
+
+<p><a href="https://github.com/charmbracelet/glow/releases">Glow binary releases</a></p>
+
+<p>Then try this to see this page:</p>
+
+<p><code>
+$ glow 011-final_thoughts.md
+</code></p>
+
+<h3>Use 'bat'</h3>
+
+<p>Bat is a drop-in replacement for the 'cat' utility written in Rust with many
+features like syntax highlighting. Bat supports Markdown files natively.</p>
+
+<h4>Installation</h4>
+
+<p><a href="https://github.com/sharkdp/bat">Bat on Github</a></p>
+
+<p>Then:</p>
+
+<p><code>
+$ bat -l markdown 011-final_thoughts.md
+</code></p>
+
 <h2>Github</h2>
 
 <p>If you create a new project on github.com, and choose the "Add a README"
