Fixed mkhtml.sh to relative link between .md files when on Github repo page

--- a/html/002-origins.html
+++ b/html/002-origins.html
@@ -40,4 +40,4 @@ format have been met with less than stellar results</p>
 
 <hr />
 
-<p><a href="001-intro_bio.html">Previous:001</a> <a href="001-intro_bio.html">Top:001</a> <a href="003-blocks_vs_spans.html">Next:003</a></p>
+<p><a href="001-intro_bio.md">Previous:001</a> <a href="001-intro_bio.md">Top:001</a> <a href="003-blocks_vs_spans.html">Next:003</a></p>
