--- a/html/004-hello.html
+++ b/html/004-hello.html
@@ -31,4 +31,4 @@ of the source file and will not appear in the compiled output.</p>
 
 <hr />
 
-<p><a href="003-blocks_vs_spans.html">Previous:003</a> <a href="001-intro_bio.html">Top:001</a> <a href="005-blocks.html">Next:005</a></p>
+<p><a href="003-blocks_vs_spans.md">Previous:003</a> <a href="001-intro_bio.md">Top:001</a> <a href="005-blocks.html">Next:005</a></p>
