--- a/html/011-final_thoughts.html
+++ b/html/011-final_thoughts.html
@@ -78,4 +78,4 @@ Gruber</p>
 
 <hr />
 
-<p><a href="010-code_blocks.html">Previous:010</a> <a href="001-intro_bio.html">Top:001</a> <a href="012-markdown_cheat_sheet.html">Next:012</a></p>
+<p><a href="010-code_blocks.md">Previous:010</a> <a href="001-intro_bio.md">Top:001</a> <a href="012-markdown_cheat_sheet.html">Next:012</a></p>
