further correction on mkhtml.sh to Next link

--- a/html/006-text_spans.html
+++ b/html/006-text_spans.html
@@ -45,4 +45,4 @@ Use 3 stars or underlines to make text both ***bold and italicized***.
 
 <hr />
 
-<p><a href="005-blocks.md">Previous:005</a> <a href="001-intro_bio.md">Top:001</a> <a href="007-lists.html">Next:007</a></p>
+<p><a href="005-blocks.md">Previous:005</a> <a href="001-intro_bio.md">Top:001</a> <a href="007-lists.md">Next:007</a></p>
