--- a/html/008-nested_lists.html
+++ b/html/008-nested_lists.html
@@ -75,4 +75,4 @@ Start each new nesting level with '1.' and again, they can be out of order after
 
 <hr />
 
-<p><a href="007-lists.md">Previous:007</a> <a href="001-intro_bio.md">Top:001</a> <a href="009-links.html">Next:009</a></p>
+<p><a href="007-lists.md">Previous:007</a> <a href="001-intro_bio.md">Top:001</a> <a href="009-links.md">Next:009</a></p>
