--- a/html/009-links.html
+++ b/html/009-links.html
@@ -46,4 +46,4 @@ quotes after the URL but before the closing right paren</p>
 
 <hr />
 
-<p><a href="008-nested_lists.md">Previous:008</a> <a href="001-intro_bio.md">Top:001</a> <a href="010-code_blocks.html">Next:010</a></p>
+<p><a href="008-nested_lists.md">Previous:008</a> <a href="001-intro_bio.md">Top:001</a> <a href="010-code_blocks.md">Next:010</a></p>
