updated README.md with link to rwcitek s docker image of this slide deck. Added sed commang to change .md to .html when running Markdown.pl on slides to html

--- a/html/003-blocks_vs_spans.html
+++ b/html/003-blocks_vs_spans.html
@@ -28,4 +28,4 @@ hard break, resetting the flow back to left edge and down some vertical amount.<
 
 <hr />
 
-<p><a href="002-origins.md">Previous:002</a> <a href="001-intro_bio.md">Top:001</a> <a href="004-hello.md">Next:004</a></p>
+<p><a href="002-origins.html">Previous:002</a> <a href="001-intro_bio.html">Top:001</a> <a href="004-hello.html">Next:004</a></p>
