--- a/html/005-blocks.html
+++ b/html/005-blocks.html
@@ -51,4 +51,4 @@ ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia</p>
 
 <hr />
 
-<p><a href="004-hello.md">Previous:004</a> <a href="001-intro_bio.md">Top:001</a> <a href="006-text_spans.md">Next:006</a></p>
+<p><a href="004-hello.html">Previous:004</a> <a href="001-intro_bio.html">Top:001</a> <a href="006-text_spans.html">Next:006</a></p>
