--- a/html/007-lists.html
+++ b/html/007-lists.html
@@ -53,4 +53,4 @@ They can be out of sequence, but must start with : '1.'</p>
 
 <hr />
 
-<p><a href="006-text_spans.md">Previous:006</a> <a href="001-intro_bio.md">Top:001</a> <a href="008-nested_lists.md">Next:008</a></p>
+<p><a href="006-text_spans.html">Previous:006</a> <a href="001-intro_bio.html">Top:001</a> <a href="008-nested_lists.html">Next:008</a></p>
