--- a/html/010-code_blocks.html
+++ b/html/010-code_blocks.html
@@ -47,4 +47,4 @@ puts "Here is some text Ruby will print to stdout"
 <p>Note: The original Markup.pl Perl script
 will render this with the 'Ruby' misplaced and no syntax coloring.<em>*</em></p>
 
-<p><a href="009-links.md">Previous:009</a> <a href="001-intro_bio.md">Top:001</a> <a href="011-final_thoughts.md">Next:011</a></p>
+<p><a href="009-links.html">Previous:009</a> <a href="001-intro_bio.html">Top:001</a> <a href="011-final_thoughts.html">Next:011</a></p>
