--- a/html/011-final_thoughts.html
+++ b/html/011-final_thoughts.html
@@ -34,7 +34,7 @@ from the  command line.</p>
 <p>Then try this to see this page:</p>
 
 <p><code>
-$ glow 011-final_thoughts.md
+$ glow 011-final_thoughts.html
 </code></p>
 
 <h3>Use 'bat'</h3>
@@ -49,14 +49,14 @@ features like syntax highlighting. Bat supports Markdown files natively.</p>
 <p>Then:</p>
 
 <p><code>
-$ bat -l markdown 011-final_thoughts.md
+$ bat -l markdown 011-final_thoughts.html
 </code></p>
 
 <h2>Github</h2>
 
 <p>If you create a new project on github.com, and choose the "Add a README"
 option, you can immediately clone the repository and begin working on it.
-It will have a file "README.md" in the project root folder. Likewise, creating
+It will have a file "README.html" in the project root folder. Likewise, creating
 such a file in your existing project will cause it to be rendered as HTML
 on the project's home page. This also works for a file named "README.markdown".</p>
 
@@ -78,4 +78,4 @@ Gruber</p>
 
 <hr />
 
-<p><a href="010-code_blocks.md">Previous:010</a> <a href="001-intro_bio.md">Top:001</a> <a href="012-markdown_cheat_sheet.md">Next:012</a></p>
+<p><a href="010-code_blocks.html">Previous:010</a> <a href="001-intro_bio.html">Top:001</a> <a href="012-markdown_cheat_sheet.html">Next:012</a></p>
