--- a/html/012-markdown_cheat_sheet.html
+++ b/html/012-markdown_cheat_sheet.html
@@ -113,4 +113,4 @@ term
 
 <hr />
 
-<p><a href="011-final_thoughts.md">Previous:011</a> <a href="001-intro_bio.md">Top:001</a> <a href="013-q_and_a.md">Next:013</a></p>
+<p><a href="011-final_thoughts.html">Previous:011</a> <a href="001-intro_bio.html">Top:001</a> <a href="013-q_and_a.html">Next:013</a></p>
