--- a/html/empty.html
+++ b/html/empty.html
@@ -4,4 +4,4 @@
 
 <hr />
 
-<p><a href="013-q_and_a.md">Previous:013</a> <a href="001-intro_bio.md">Top:001</a> <a href="">Next:</a></p>
+<p><a href="013-q_and_a.html">Previous:013</a> <a href="001-intro_bio.html">Top:001</a> <a href="">Next:</a></p>
