--- a/html/013-q_and_a.html
+++ b/html/013-q_and_a.html
@@ -6,4 +6,4 @@
 
 <hr />
 
-<p><a href="012-markdown_cheat_sheet.md">Previous:012</a> <a href="001-intro_bio.md">Top:001</a> <a href="empty">Next:empty</a></p>
+<p><a href="012-markdown_cheat_sheet.html">Previous:012</a> <a href="001-intro_bio.html">Top:001</a> <a href="empty">Next:empty</a></p>
